account page styling finished, fixed navbar on tablets, delete modal styling done

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,6 +1,7 @@
 .NavbarContainer {
   height: 70px;
   display: flex;
+  /* width: 100vw; */
   flex-direction: row;
   justify-content: center;
   align-items: center;
@@ -14,7 +15,7 @@
   position: absolute;
   left: 0;
   font-size: 2rem;
-  margin: 0;
+  margin: 0 10px;
 }
 
 .ButtonSection {
@@ -32,29 +33,42 @@
 
 .NavButton {
   font-size: 1.1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 40px;
   width: 80px;
   margin-right: 10px;
   border: none;
   border-radius: 25px;
   color: rgb(212, 81, 61);
+  background-color: white; 
+  position: relative;
+  overflow: hidden; 
+  z-index: 1;
 }
 
-/* .NavButton::before {
+.NavButton::before {
   content: "";
   position: absolute;
-  display: block;
   top: 0;
-  left: 0;
-  height: 50px;
-  width: 1px;
-  color: blue;
-  z-index: 12;
-} */
+  left: 0; 
+  height: 100%;
+  width: 0; 
+  /*! Change this color with ezra */
+  background-color: #f3e9dc;
+  z-index: -1; 
+  transition: width 0.3s ease; 
+}
+
+.NavButton:hover::before {
+  width: 100%; 
+}
 
 
-@media screen and (max-width: 490px) {
+@media screen and (max-width: 700px) {
   .ButtonSection h1 {
     display: none;
   }
 }
+
